[project]
name = "mobile-coverage"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy Wong",email = "timothy.wong@hotmail.co.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "huggingface-hub (>=0.35.0,<0.36.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "datasets (>=4.1.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
ipywidgets = "^8.1.7"

