[tool.poetry]
name = "mobile-coverage"
version = "0.1.0"
description = "SVM vs geometric baselines for mobile coverage using crowdsourced data"
authors = ["Timothy Wong <timothy.wong@hotmail.co.uk>", "Tom Freeman <tomrfreeman@gmail.com>"]
readme = "README.md"
package-mode = false  # treat this as a non-package research repo

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2"
matplotlib = "^3.9"
geopandas = "^1.0"
scikit-learn = "^1.5"
duckdb = "^1.1"
shapely = "^2.0"
pyproj = "^3.6"
rtree = { version = "^1.3", optional = true }
datasets = "^4.1.1"
osmnx = "^2.0.6"
keplergl = "^0.3.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29"
ipywidgets = "^8.1"
black = "^24.0"
ruff = "^0.6"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
